Version 0.3
===========

08.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Removed show user page and changed all show user links to point to user's twitter profile
  * Implemented design for users page, added additional user info (name, url, location)

07.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added drag and drop functionality for categories select
  * Bugfix: Draggable box is empty when there is no subscription
  * Added clear both after every second category tweets/members display in welcome page
  * Redirect to welcome page when user is not logged in and tries to access protected page
  * Refactoring: Changed singleton TWITTER_HTTP_ACCESS class into TwitterAccess module
  * Changed show user page to be public
  * Added lists_tweets table for tweets categorization
  * Query optimizations in welcome controller
  * Changed number of users / tweets per category to 5 on welcome page
  * Fixed user links on front page (/users/username -> /username)

27.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Added /login, /logout, /settings, /deactivate /username routes
  * Changed layout (user div box is top-right)
  * Moved all user settings into one place /settings
  * Bugfix: localization of pagination links
  * Bugfix: localization of time_ago_in_words
  * Bugfix: display only active users
  * Bugfix: redirect to settings url when user logins but haven't selected any categories previously

26.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented category to list functionality (every user can create a list on his twitter account from users in category at 140.mk site)
  * Added one more step for deactivating account

  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfix: Tabs now work for categories with spaces in the title


Version 0.2
===========

24.01.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>