@@ -43,10 +43,6 @@ body
   background: #fff
   +border-radius(12px)
 
-#sidebar
-  .content
-    text-align: right
-
 #footer
   padding: 20px
   margin-top: 10px
