@@ -7,6 +7,9 @@ Version 0.3
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Removed show user page and changed all show user links to point to user's twitter profile
   * Implemented design for users page, added additional user info (name, url, location)
+  * Implemented design for categories page
+  * Added counter_cache subscriptions_count in lists table
+  * Moved create list to right area, added notification when user is not logged in
 
 07.02.2010
 ==========
